updated the theme button, updated the UI

--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #ffffff;
+    background-color: #fafafe;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
-    color: #000000;
+    color: #333;
+    position: relative;
   }
   
-  header {
-    background-color: #000000;
-    color: rgb(255, 255, 255);
+  header, footer {
+    background-color: #fafafe;
+    color: #333;
     padding: 1rem;
     text-align: center;
   }
   
-  nav ul {
+  nav ul {  
     list-style: none;
     padding: 0;
     display: flex;
@@ -22,43 +26,74 @@ body {
   }
   
   nav a {
-    color: rgb(255, 255, 255);
+    color: #333;
     text-decoration: none;
     font-weight: bold;
+    transition: color 0.3s ease;
   }
   
+  nav a:hover {
+    color: #007bff;
+  }
+
   main {
     padding: 2rem;
+    padding-bottom: 5rem;
+    flex: 1;
   }
   
   section {
     margin-bottom: 2rem;
     font-size: large;
   }
+
+  .dark-mode {
+    background-color: #444;
+    color: #ddd;
+  }
+  
+  .dark-mode header,
+   .dark-mode footer {
+    background-color: #444;
+    color: #ddd;
+  }
+  .dark-mode nav a {
+    color: #ddd;
+  }
   
   footer {
-    background-color: #000000;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    padding: 1rem;
-    position: fixed;
+    position: absolute;
     bottom: 0;
+    left: 0;
     width: 100%;
-    padding-bottom: 1rem;
+    height: 5rem;
   }
-  .dark-mode {
-    background-color: #ffffff;
-    color: #000000;
-  }
-  
-  .dark-mode a {
-    background-color: #000000;
-    color: #ffffff;
-  }
-  
   ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     font-size: large;
     }
+
+    #darkModeToggle {
+      background-color: #f0f0f0;
+      color: #333;
+      border: none;
+      padding: 0.5rem 1rem;
+      cursor: pointer;
+      border-radius: 100px;
+      transition: background-color 0.3s ease, color 0.3s ease; /* Добавяме плавен преход */
+  }
+  
+  #darkModeToggle:hover {
+      background-color: #757575;
+  }
+  
+  .dark-mode-button {
+      background-color: #333;
+      color: #f0f0f0;
+  }
+  
+  .dark-mode-transition {
+      transition: background-color 0.5s ease, color 0.5s ease;
+  }
